--- a/cordotest/www/index.html
+++ b/cordotest/www/index.html
@@ -31,7 +31,7 @@
 				<button id ='addTask'>+</button>
 				<h1>TaskList</h1>
 			</div>
-			<ul data-role="listview">
+			<ul data-role="listview" id = "pepe">
 				
 
 			</ul>
@@ -93,5 +93,7 @@
 				$.mobile.defaultPageTransition = "none";
 				$.mobile.defaultDialogTransition = "none";
 		});
+		
 		</script><script type="text/javascript" src="js/jquery-1.5.0.mobile.min.js"></script><script src="js/index.js"></script></body>
+		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </html>
